2005-08-26  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/dshgroup.c (_read_groupfile) : module was testing 
	  for backupfile (/etc/dsh/group/%s), after access() call for 
	  default ($HOME/.dsh/group/%s) failed, but was still opening
	  default instead of backupfile. (Joe Ramey <ramey@it.com>)

2005-08-17  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (dsh) : Remove debug output when processing
	  remote return codes.

2005-08-15  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Allow PDSH_WITH_OPTIONS and PDSH_WITHOUT_OPTIONS
	  to be used to specify which conditional subpackages to build with
	  rpmbuild as well as existing --with and --without flags.

	* src/modules/genders.c : Tweak module help info for clarity.

	* : tag pdsh-2.7

2005-08-12  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/dshgroup.c : Add dshgroup module providing 
	  -g/-X groupname to read list of targets from groupname file in 
	  ~/.dsh/group/ or /etc/dsh/group/groupname.
	
	* configure.ac, pdsh.spec, config/ac_dshgroup.m4, 
	  src/modules/Makefile.am : 
	  Build, package, and document dshgroup module.

	* src/pdsh/dsh.c : Add alternate definition of PTHREAD_STACK_MIN in
	  case definition is missing from pthread.h.

2005-08-10  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c : Include fd.h to avoid warning.

	* src/modules/sshcmd.c : Fix some compile warnings.

	* configure.ac : Add AM_MAINTAINER_MODE to disable maintainer-mode by
	  default. Remove AC_AIX which appears to leave CFLAGS set and disrupt
	  proper functioning of other macros. Run ./bootstrap.

2005-08-09  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/sshcmd.c : Add close-on-exec flag to file descriptors
	  passed back from sshcmd() so they aren't inadvertently left open
	  in subsequently invoked ssh commands.

2005-08-08  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c (opt_default, _find_path) : Initialize path_progname
	  for both pdsh and pdcp.
